--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,7 +57,7 @@ jobs:
 
       - shell: msys2 {0}
         run: |
-          pacman --noconfirm --needed -S autoconf automake make pkg-config git libtool zip
+          pacman --noconfirm --needed -S autoconf automake make pkg-config git libtool zip ncurses
           pacman --noconfirm --needed -S mingw-w64-x86_64-toolchain nasm yasm
           ./configure --target=i586-pc-msdosdjgpp --disable-werror
           make
