Add zlib1.dll to Windows build artifact

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,4 +92,6 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: natives-windows
-          path: gdb/gdb.exe
+          path: |
+            gdb/gdb.exe
+            /mingw64/bin/zlib1.dll
